src/main/default/objects/BP_Game__c/BP_Game__c.object-meta.xml
<CustomObject>
    <description>Game object</description>
    <label>Game</label>
    <nameField>
        <label>Game Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Games</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>