src/main/default/objects/BP_Game__c/fields/BP_bggId__c.field-meta.xml
<CustomField>
    <fullName>BP_bggId__c</fullName>
    <externalId>true</externalId>
    <label>BGG Id</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>