src/main/default/objects/BP_Game__c/fields/BP_BggSite__c.field-meta.xml
<CustomField>
    <fullName>BP_BggSite__c</fullName>
    <description>BGG website address</description>
    <label>BGG site</label>
    <type>Url</type>
</CustomField>