src/main/default/objects/BP_Game__c/fields/BP_Category__c.field-meta.xml
<CustomField>
    <fullName>BP_Category__c</fullName>
    <label>Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abstract Strategy</fullName>
            </value>
            <value>
                <fullName>Action / Dexterity</fullName>
            </value>
            <value>
                <fullName>Adventure</fullName>
            </value>
            <value>
                <fullName>Age of Reason</fullName>
            </value>
            <value>
                <fullName>American Civil War</fullName>
            </value>
            <value>
                <fullName>American Indian Wars</fullName>
            </value>
            <value>
                <fullName>American Revolutionary War</fullName>
            </value>
            <value>
                <fullName>American West</fullName>
            </value>
            <value>
                <fullName>Ancient</fullName>
            </value>
            <value>
                <fullName>Animals</fullName>
            </value>
            <value>
                <fullName>Arabian</fullName>
            </value>
            <value>
                <fullName>Aviation / Flight</fullName>
            </value>
            <value>
                <fullName>Bluffing</fullName>
            </value>
            <value>
                <fullName>Book</fullName>
            </value>
            <value>
                <fullName>Card Game</fullName>
            </value>
            <value>
                <fullName>Children&apos;s Game</fullName>
            </value>
            <value>
                <fullName>City Building</fullName>
            </value>
            <value>
                <fullName>Civil War</fullName>
            </value>
            <value>
                <fullName>Civilization</fullName>
            </value>
            <value>
                <fullName>Collectible Components</fullName>
            </value>
            <value>
                <fullName>Comic Book / Strip</fullName>
            </value>
            <value>
                <fullName>Deduction</fullName>
            </value>
            <value>
                <fullName>Dice</fullName>
            </value>
            <value>
                <fullName>Economic</fullName>
            </value>
            <value>
                <fullName>Educational</fullName>
            </value>
            <value>
                <fullName>Electronic</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>Expansion for Base-game</fullName>
            </value>
            <value>
                <fullName>Exploration</fullName>
            </value>
            <value>
                <fullName>Fan Expansion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>