src/main/default/objects/BP_Game__c/fields/BP_Description__c.field-meta.xml
<CustomField>
    <fullName>BP_Description__c</fullName>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>