src/main/default/objects/BP_Game__c/fields/BP_ExpansionFor__c.field-meta.xml
<CustomField>
    <fullName>BP_ExpansionFor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to main game</description>
    <label>Expansion For</label>
    <referenceTo>BP_Game__c</referenceTo>
    <relationshipLabel>Expansions</relationshipLabel>
    <relationshipName>Expansions</relationshipName>
    <type>Lookup</type>
</CustomField>