src/main/default/objects/BP_Game__c/fields/BP_HasExpansion__c.field-meta.xml
<CustomField>
    <fullName>BP_HasExpansion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Expansion</label>
    <type>Checkbox</type>
</CustomField>