src/main/default/objects/BP_Game__c/fields/BP_IsExpansion__c.field-meta.xml
<CustomField>
    <fullName>BP_IsExpansion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if game is expansion to another game</description>
    <label>Is Expansion</label>
    <type>Checkbox</type>
</CustomField>