src/main/default/objects/BP_Game__c/fields/BP_MaximumPlayersNumber__c.field-meta.xml
<CustomField>
    <fullName>BP_MaximumPlayersNumber__c</fullName>
    <label>Maximum Players Number</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>