src/main/default/objects/BP_Game__c/fields/BP_MaximumPlaytimeInMinutes__c.field-meta.xml
<CustomField>
    <fullName>BP_MaximumPlaytimeInMinutes__c</fullName>
    <label>Maximum Playtime In Minutes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>