src/main/default/objects/BP_Game__c/fields/BP_Mechanic__c.field-meta.xml
<CustomField>
    <fullName>BP_Mechanic__c</fullName>
    <label>Mechanic</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acting</fullName>
            </value>
            <value>
                <fullName>Action Drafting</fullName>
            </value>
            <value>
                <fullName>Action Points</fullName>
            </value>
            <value>
                <fullName>Action Queue</fullName>
            </value>
            <value>
                <fullName>Action Retrieval</fullName>
            </value>
            <value>
                <fullName>Action Timer</fullName>
            </value>
            <value>
                <fullName>Action/Event</fullName>
            </value>
            <value>
                <fullName>Advantage Token</fullName>
            </value>
            <value>
                <fullName>Alliances</fullName>
            </value>
            <value>
                <fullName>Area Majority / Influence</fullName>
            </value>
            <value>
                <fullName>Area Movement</fullName>
            </value>
            <value>
                <fullName>Area-Impulse</fullName>
            </value>
            <value>
                <fullName>Auction Compensation</fullName>
            </value>
            <value>
                <fullName>Auction: Dexterity</fullName>
            </value>
            <value>
                <fullName>Auction: Dutch</fullName>
            </value>
            <value>
                <fullName>Auction: Dutch Priority</fullName>
            </value>
            <value>
                <fullName>Auction: English</fullName>
            </value>
            <value>
                <fullName>Auction: Fixed Placement</fullName>
            </value>
            <value>
                <fullName>Auction: Multiple Lot</fullName>
            </value>
            <value>
                <fullName>Auction: Once Around</fullName>
            </value>
            <value>
                <fullName>Auction: Sealed Bid</fullName>
            </value>
            <value>
                <fullName>Auction: Turn Order Until Pass</fullName>
            </value>
            <value>
                <fullName>Auction/Bidding</fullName>
            </value>
            <value>
                <fullName>Automatic Resource Growth</fullName>
            </value>
            <value>
                <fullName>Betting and Bluffing</fullName>
            </value>
            <value>
                <fullName>Bias</fullName>
            </value>
            <value>
                <fullName>Bids As Wagers</fullName>
            </value>
            <value>
                <fullName>Bingo</fullName>
            </value>
            <value>
                <fullName>Bribery</fullName>
            </value>
            <value>
                <fullName>Campaign / Battle Card Driven</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>