src/main/default/objects/BP_Game__c/fields/BP_MinimumPlaytimeInMinutes__c.field-meta.xml
<CustomField>
    <fullName>BP_MinimumPlaytimeInMinutes__c</fullName>
    <label>Minimum Playtime In Minutes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>