src/main/default/objects/BP_Game__c/fields/BP_NumberOfOwners__c.field-meta.xml
<CustomField>
    <fullName>BP_NumberOfOwners__c</fullName>
    <label>Number of Owners</label>
    <summaryForeignKey>BP_CollectionItem__c.BP_Game__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>