src/main/default/objects/BP_Game__c/fields/BP_PublishedDate__c.field-meta.xml
<CustomField>
    <fullName>BP_PublishedDate__c</fullName>
    <label>Published Date</label>
    <type>Date</type>
</CustomField>