src/main/default/objects/BP_Game__c/fields/BP_PublishedYear__c.field-meta.xml
<CustomField>
    <fullName>BP_PublishedYear__c</fullName>
    <label>Published Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>