src/main/default/objects/BP_Game__c/fields/BP_Publisher__c.field-meta.xml
<CustomField>
    <fullName>BP_Publisher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Publisher</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Games</relationshipLabel>
    <relationshipName>Games</relationshipName>
    <type>Lookup</type>
</CustomField>