src/main/default/objects/BP_Game__c/fields/BP_RecommendedAge__c.field-meta.xml
<CustomField>
    <fullName>BP_RecommendedAge__c</fullName>
    <label>Recommended Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>