src/main/default/objects/BP_Game__c/fields/BP_Type__c.field-meta.xml
<CustomField>
    <fullName>BP_Type__c</fullName>
    <description>Type of the game</description>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customisable Games</fullName>
            </value>
            <value>
                <fullName>Children&apos;s Games</fullName>
            </value>
            <value>
                <fullName>Family Games</fullName>
            </value>
            <value>
                <fullName>Party Games</fullName>
            </value>
            <value>
                <fullName>Strategy Games</fullName>
            </value>
            <value>
                <fullName>Thematic Games</fullName>
            </value>
            <value>
                <fullName>Wargames</fullName>
            </value>
            <value>
                <fullName>Abstract Games</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>