src/main/default/objects/BP_Game__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BP_MinimumPlayersNumber__c</columns>
    <columns>BP_MaximumPlayersNumber__c</columns>
    <columns>BP_RecommendedAge__c</columns>
    <columns>BP_IsExpansion__c</columns>
    <columns>BP_ExpansionFor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>