src/main/default/objects/BP_Game__c/listViews/BP_StrategyGamesListView.listView-meta.xml
<ListView>
    <fullName>BP_StrategyGamesListView</fullName>
    <columns>NAME</columns>
    <columns>BP_MinimumPlayersNumber__c</columns>
    <columns>BP_MaximumPlayersNumber__c</columns>
    <columns>BP_RecommendedAge__c</columns>
    <columns>BP_Publisher__c</columns>
    <columns>BP_IsExpansion__c</columns>
    <columns>BP_ExpansionFor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BP_Type__c</field>
        <operation>includes</operation>
        <value>Strategy Games</value>
    </filters>
    <label>Strategy Games</label>
    <sharedTo>
        <group>BP_GameCreatorGroup</group>
        <group>BP_GameOwnerGroup</group>
    </sharedTo>
</ListView>